# electricity-meter-rs

./: .env.tpl  .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  justfile
.cargo/: config.toml
.gitea/workflows/: build-publish.yaml  release-just.yaml  release.yaml
root/etc/systemd/system/: electricity-meter.service
src/: lib.rs  main.rs  metrics.rs
src/lib/: lib.rs  obi_names.rs  read_serial.rs
src/serial/: config.rs  meter.rs  mod.rs  model.rs  obi.rs
