[package]
name = "electricity_meter_rs"
version = "0.1.0"
edition = "2021"
default-run = "electricity_meter_rs"

[dependencies]
actix-web = "4"
actix-web-prom = { version = "0.9.0", features = ["process"] }
prometheus = { version = "0.13", default-features = false }
serialport = "4.7.1"
sml-rs = "0.4.0"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.5.0"

[[bin]]
name = "read-serial"
path = "src/bin/read_serial.rs"
